# mx25v-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
nrf52840/: Cargo.toml
nrf52840/tests/: asynchronous.rs  blocking.rs
src/: asynchronous.rs  blocking.rs  command.rs  lib.rs
