[package]
name = "mx25v"
version = "0.1.0"
edition = "2021"
authors = ["rossporter506 <rossporter506@gmail.com>"]
repository = "https://github.com/rossporter506/mx25v-rs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rossporter506/mx25v-rs"
description = "Platform-agnostic Rust driver for the macronix MX25V NOR flash."
documentation = "https://docs.rs/mx25v"
readme = "README.md"
keywords = ["nor-flash", "spi", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
    "nrf52840",
]


[dependencies]
embedded-hal = "1"
embedded-hal-async = "1.0"
bit = "0.1.1"
defmt = { version = "1", optional = true }
embedded-storage-async = "0.4"
embedded-storage = "0.3"
embassy-futures = "0.1"

[package.metadata.docs.rs]
all-features = true
